[package]
authors = [
    "The Cortex-M Team <cortex-m@teams.rust-embedded.org>",
]
categories = ["embedded", "no-std"]
description = "Foundational mutex trait and helpers"
documentation = "https://docs.rs/mutex-trait"
keywords = ["mutex"]
license = "MIT OR Apache-2.0"
name = "mutex-trait"
readme = "README.md"
repository = "https://github.com/rust-embedded/mutex-trait"
version = "0.2.0"
edition = "2018"
